# LLM-project

./: .gitignore  README.md  pyproject.toml
src/llm_project/: __init__.py  dataset.py  tokenizer.py
tests/: test_dataset.py  test_tokenizer.py  train_tokenizer.py
